--- a/index.html
+++ b/index.html
@@ -8,18 +8,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container" id="container1">
     <h1>Any Text Share</h1>
-    <h2>Share your text with anyone</h2>
+    <h2>Share your text with anyone</h2></div>
     <!-- Use id and password to save the text -->
-    <div class="container">
+    <div class="container" id="container">
     <input type="password" name="password" placeholder="Password" id="password" required>
     <textarea name="text" cols="30" rows="10" placeholder="Text" id="text" required></textarea>
     <button type="submit" value="Save" onclick="saveText()">Save</button>
-
+    <!-- Show the link to share -->
+    <p id="link"></p>
+    
     </div>
     <!-- Add message text area -->
-    <textarea name="message" id="message" cols="30" rows="10" placeholder="Message" readonly></textarea>
+    <div class="container" id="container2">
+    <textarea name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea>
+    <button type="submit" value="Save" onclick="savechanges()" id="savechanges">Save</button>
+    </div>
 </body>
 <script src="https://www.gstatic.com/firebasejs/8.0.2/firebase.js"></script>
 <script src="script.js"></script>
