Added createnew button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <div class="container" id="container1">
     <h1>Any Text Share</h1>
+    <!-- Add create new text button and show it only if there is no text -->
+    <button type="submit" value="Create" onclick="createNew()" id="create" >Create New</button>
     <h2>Share your text with anyone</h2></div>
     <!-- Use id and password to save the text -->
     <div class="container" id="container">
