--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
     <div class="container" id="container2">
     <textarea name="message" id="message" cols="30" rows="10" placeholder="Message">Loading....................</textarea>
     <button type="submit" value="Save" onclick="savechanges()" id="savechanges">Save</button>
+    <!-- Add share button -->
+    <button type="submit" value="Share" onclick="shareshare()" id="share">Share</button>
     </div>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js" integrity="sha256-/H4YS+7aYb9kJ5OKhFYPUjSJdrtV6AeyJOtTkw6X72o=" crossorigin="anonymous"></script>
 <script src="https://www.gstatic.com/firebasejs/8.0.2/firebase.js"></script>
 <script src="script.js"></script>
 </html>
